# open_spiel

./: Dockerfile
open_spiel/algorithms/: CMakeLists.txt  dqn_pytorch.cc
open_spiel/algorithms/dqn_pytorch/: CMakeLists.txt  dqn_pytorch.cc  dqn_pytorch.h  simple_nets.cc  simple_nets.h  simple_nets_test.cc
open_spiel/algorithms/dqn_torch/: CMakeLists.txt  dqn.cc  dqn.h  dqn_torch.cc  dqn_torch.h  dqn_torch_test.cc  simple_nets.cc  simple_nets.h  simple_nets_test.cc
open_spiel/examples/: CMakeLists.txt  dqn_torch_example.cc
open_spiel/python/pytorch/: Untitled.ipynb  armac.py  armac_backup.py  armac_example.ipynb  catch_test.ipynb  double_neural_cfr.py  dqn.py  dqn_test.py  eva.py  example_eva.py  kuhn_policy_gradient.ipynb  leduc_research_pt_eva.ipynb  leduc_research_tf_eva.ipynb  rcfr.py  rcfr_pytorch.ipynb  rcfr_test.py  research_dqn_pytorch.ipynb  research_pt_eva.ipynb  test.py  test_tf.py
open_spiel/python/pytorch/armac/: armac.py  armac_test.py  armac_util_test.py  armac_utils.py  for_armac.ipynb  nets.py
open_spiel/python/pytorch/armac/.ipynb_checkpoints/: for_armac-checkpoint.ipynb
open_spiel/python/spielviz/: setup.py
